# DHanalysis-extra

./: .env.example  .gitignore
backend/: batch_predict.sh  batch_predict_poisson.sh  batch_predict_poisson_resume.sh  pyproject.toml
backend/src/dhx/: __init__.py  config.py  db.py  storage.py
backend/src/dhx/features/: __init__.py  __main__.py  assemble.py  labels.py  loader.py  market.py  rolling.py  runner.py  store.py  unpivot.py  upcoming.py
backend/src/dhx/ingestion/: __main__.py  backfill.py  results.py  runner.py  sofascore.py  sofascore_client.py
backend/src/dhx/modeling/: __init__.py  __main__.py  backtest.py  base.py  consensus_sim.py  contrarian.py  ensemble.py  evaluate.py  markets.py  poisson.py  registry.py  runner.py  store.py  strategy_sim.py  trend_sim.py  xgboost_model.py
backend/src/dhx/models/: __init__.py  fixtures.py  odds.py  pipeline.py  sources.py  statistics.py
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/src/app/: layout.tsx
dashboard/src/app/api/lock-bets/: route.ts
dashboard/src/app/api/settle-results/: route.ts
dashboard/src/app/api/store-picks/: route.ts
dashboard/src/app/api/update-odds/: route.ts
dashboard/src/app/daily/: page.tsx
dashboard/src/app/today/: page.tsx
dashboard/src/components/: daily-simulator.tsx  sidebar.tsx  today-match-detail.tsx  today-match-list.tsx  totals-trends-chart.tsx  trends-chart.tsx  upcoming-predictions.tsx
dashboard/src/lib/: pick-engine.ts  queries.ts  settlement.ts  types.ts
dashboard/src/lib/supabase/: client.ts  server.ts
sql/: 00_dhx_schema.sql
(+2 files in other folders)
