[project]
name = "dhx-analysis"
version = "0.1.0"
description = "DHextra – extra league football betting analysis"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "cloudscraper>=1.2,<2",
    "supabase>=2,<3",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "polars>=1,<2",
    "typer>=0.12,<1",
    "tenacity>=9,<10",
    "python-dotenv>=1,<2",
    "rich>=13,<14",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "xgboost>=2.0,<3",
    "scikit-learn>=1.4,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dhx"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
